@@ -19,9 +19,13 @@ The Waf tools in waflib/extras are not added to the waf script. To add
 some of them, use the --tools switch:
 $ ./waf-light --tools=compat15,swig
 
-To add a tool that does not exist in the folder extras, pass an absolute path
-To customize the initialization, pass the parameter 'prelude'
-$ ./waf-light --make-waf --tools=compat15,/comp/waf/aba.py --prelude=$'\tfrom waflib.extras import compat15\n\print "ok"'
+To add a tool that does not exist in the folder extras, pass an absolute path, and
+to customize the initialization, pass the parameter 'prelude'. Here is for example
+how to create a waf file using the compat15 module:
+$ ./waf-light --tools=compat15 --prelude=$'\tfrom waflib.extras import compat15\n'
+
+Any kind of initialization is possible, though one may prefer the build system kit (folder build_system_kit):
+$ ./waf-light --make-waf --tools=compat15,/comp/waf/aba.py --prelude=$'\tfrom waflib.extras import compat15\n\tprint "ok"'
 
 HOW TO TRY THE EXAMPLES
 -----------------------
