@@ -1,4 +1,4 @@
-Waf 1.6.x
+Waf 1.7.x
 ---------
 
 * fix the remaining bugs
