@@ -1,5 +1,3 @@
 *.o
-.lock-w*
 .conf_check_*
-config.log
 c4che
