@@ -41,4 +41,3 @@ usage_statistics_webtalk.html
 xlnx_auto_0_xdb
 xst
 webtalk.log
-
